--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ Make sure to note the version number that you use.
 
 #### Install the required packages
 
-```{r,message=FALSE}
+```{r,message=FALSE,eval=FALSE}
 #install.packages("remotes")
 remotes::install_github("traitecoevo/datastorr")
 remotes::install_github("traitecoevo/leaf13C")
@@ -35,7 +35,7 @@ local_data <- leaf13C::get_data()
 ```
 This should download the most recent version of the database on to your computer and load it into R.  
 
-Meta-data for these columns are (here)[https://github.com/traitecoevo/leaf13C/blob/master/leaf13C_metadata.txt].
+Meta-data for these columns are [here](https://github.com/traitecoevo/leaf13C/blob/master/leaf13C_metadata.txt).
 
 As the database moves forward the version number will change, but access to older versions will be possible through either this R package, the Github Releases page, or the Zenodo DOIs.
 
